# learning-haskell

./: .gitignore  README.org  e_eval.hs  notes.org
.github/workflows/: haskell.yml
Haskell_Programming_from_first_principles/: README.md
Haskell_Programming_from_first_principles/ch09/: ciphers.hs
Haskell_Programming_from_first_principles/ch10/: vowelsStops.hs  wordsAvg.hs
Haskell_Programming_from_first_principles/ch16/: ch16.cabal
Haskell_Programming_from_first_principles/ch17/: ch17.cabal
Haskell_Programming_from_first_principles/ch17/src/: FinalExs.hs  Validation.hs  ZipList.hs
Haskell_Programming_from_first_principles/ch17/test/: Spec.hs
Haskell_Programming_from_first_principles/ch18/: ch18.cabal
Haskell_Programming_from_first_principles/ch18/src/: EitherMonad.hs  FinalExs.hs  Kleisli.hs  ListMonad.hs
Haskell_Programming_from_first_principles/ch18/test/: Spec.hs
Haskell_Programming_from_first_principles/ch19/: ch19.cabal  stack.yaml
Haskell_Programming_from_first_principles/ch19/src/: MainScotty.hs
adwh/: chapter1-functional-programming.org  chapter2-timing.org
aoc2020/day1/: Day1.hs
aoc2020/day2/: Day2.hs
aoc2020/day3/: Day3.hs
aoc2020/day4/: Day4.hs
aoc2020/day5/: Day5.hs
aoc2020/day6/: Day6.hs
aoc2020/day7/: Day7.hs
aoc2022/: LICENSE  README.md  aoc2022.cabal  hie.yaml  stack.yaml
aoc2022/app/: Main.hs
aoc2022/inputs/: ch05.txt
aoc2022/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Main.hs  Utils.hs
aoc2022/test/: Day07Test.hs  Day08Test.hs  Spec.hs  UtilsTest.hs
books-related/: README.org
books-related/adwh/: chapter1-functional-programming.org  chapter2-timing.org
books-related/hid/: ChangeLog.md  README.md  README.org  hid.cabal  package.yaml
books-related/hid/1/: c11.hs  c12.hs
books-related/hid/ch01/: Ch01.hs
books-related/hid/ch02/: Main.hs
books-related/hid/ch1/: CHANGELOG.md  LICENSE  README.md  README.org  ch1.cabal  hie.yaml  package.yaml  stack.yaml
books-related/hid/ch1/app-extra/: Main.hs
books-related/hid/ch1/app-hangman/: Main.hs
books-related/hid/ch11/: CHANGELOG.md  ch11.cabal
books-related/hid/ch11/src/: Lib.hs  TypeFamilies.hs  TypeLit.hs  Unescape.hs
books-related/hid/ch12/: CHANGELOG.md  ch12.cabal
books-related/hid/ch12/src/: Expression.hs  GenericSql.hs  Lib.hs
books-related/hid/ch2/: CHANGELOG.md  ch2.cabal  rnd-dirs.txt  rnd-turns.txt
books-related/hid/ch2/app/: Main.hs
books-related/hid/ch2/src/: Lib.hs
books-related/hid/ch3/: stockquotes.cabal
books-related/hid/ch3/src/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
books-related/hid/ch5/: CHANGELOG.md  LICENSE  README.md  ch5.cabal
books-related/hid/ch5/app/: Main.hs
books-related/hid/ch5/src/: IORefs.hs  Lib.hs  MonadReader.hs
books-related/hid/ch6/: CHANGELOG.md  README.md  ch6.cabal  package.yaml
books-related/hid/ch7/: CHANGELOG.md  README.md  ch7.cabal  package.yaml
books-related/hpffp/ch08/: ch8.hs
books-related/hpffp/ch09/: ciphers.hs  exsOnStrings.hs  listExs.hs  listOps.hs  myEnumFrom.hs  myStandartFunctions.hs
books-related/hpffp/ch10/: databaseProcessing.hs  rewritingWithFolds.hs  vowelsStops.hs  wordsAvg.hs
books-related/hpffp/ch11/: AnimalFarm.hs  BinaryTree.hs  ManufacturerAirlineVehicle.hs  Newtype.hs  Programmers.hs  asPatterns.hs  language.hs  vigenereCipher.hs
books-related/hpffp/ch12/: eitherLib.hs  iterateUnfold.hs  maybeLib.hs  natural.hs  stringProcessing.hs  validateTheWord.hs
books-related/hpffp/ch15/: README.md
books-related/hpffp/ch18/: LICENSE  README.md
books-related/hpffp/ch19/: README.md  ch19.cabal
books-related/hpffp/ch20/: LICENSE  README.md  ch20.cabal
books-related/hpffp/ch20/src/: Main.hs
books-related/hpffp/ch21/: README.md  ch21.cabal
books-related/hpffp/ch21/src/: Lib.hs
books-related/hpffp/ch21/testsuite/tests/: Main.hs
books-related/hpffp/ch22/: README.md  ch22.cabal
books-related/hpffp/ch23/: README.md  ch23.cabal
books-related/hpffp/ch23/src/: ChapterExercises.hs  FizzBuzz.hs  Lib.hs  Moi.hs  RandomExample.hs  RollYourOwn.hs
books-related/hpffp/ch24/: README.md  ch24.cabal
books-related/hpffp/ch24/src/: BT.hs  DataIni.hs  ExamplesAlternative.hs  IntegerParsing.hs  LogParser.hs  Marshalling.hs  ParsingConfigurationFile.hs  ParsingFractions.hs  ParsingFractionsPolymorphic.hs  ParsingFreeJazz.hs  ParsingPractice.hs  PhoneNumber.hs  SemanticVersion.hs  ip.hs
books-related/hpffp/ch25/: README.md  ch25.cabal
books-related/hpffp/ch26/: README.md  ch26.cabal
hackerrank/: bubbleSort.hs  convexHull.hs  prime.hs
hpffp/ch08/: ch8.hs
hpffp/ch09/: exsOnStrings.hs  myStandartFunctions.hs
hpffp/ch11/: asPatterns.hs  language.hs
hpffp/ch12/: eitherLib.hs
hpffp/ch15/src/: MyLib.hs
hpffp/ch16/src/: Lib.hs
hpffp/ch17/test/: Spec.hs
hpffp/ch18/src/: BadMonad.hs  MaybeMonad.hs
hpffp/ch18/test/: Spec.hs
hpffp/ch19/src/: Functors.hs
lhffp/: ch9.hs
lhffp/ch10/: databaseProcessing.hs  fib.hs  rewritingWithFolds.hs
lhffp/ch11/: AnimalFarm.hs  BinaryTree.hs  ManufacturerAirlineVehicle.hs  Newtype.hs  Programmers.hs  vigenereCipher.hs  vigenere_cipher.hs
lhffp/ch12/: binaryTree.hs  iterateUnfold.hs  maybeLib.hs  stringProcessing.hs
lhffp/ch15/: exercises.cabal  stack.yaml
lhffp/ch15/app/: Main.hs
lhffp/ch15/src/: MyLib.hs
lhffp/ch15/test/: MyTest.hs
lhffp/ch17/src/: Apl1.hs  List.hs
lhffp/ch17/test/: Spec.hs
lhffp/ch9/: listExs.hs  listOps.hs  myEnumFrom.hs  myStandartFunctions.hs  myStandartFunctions.hs~
misc/applicative/: applicative.cabal  stack.yaml
misc/applicative/src/: Lib.hs
misc/applicative/test/: Main.hs
misc/kafka/: CHANGELOG.md  kafka-toys.cabal
misc/kafka/app/: ConsumerMain.hs
misc/monad/: monad.cabal
misc/monad/src/: Lib.hs
misc/monad/test/: Main.hs
project_euler/: p1.hs  p2.hs  p3.hs  p4.hs  p7.hs
websites-related/hackerrank-exercises/: README.md  convexHull.hs  evalIntegral.hs  prime.hs
websites-related/project-euler/: p1.hs  p2.hs  p3.hs  p4.hs  p5.hs  p6.hs  p7.hs
(+103 files in other folders)
