name:                aoc2022
version:             0.1.0.0
synopsis:            "AOC2022"
description:         "Advent of code 2022"
homepage:            https://github.com/albertodvp/aoc2022#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Fanton
maintainer:          alberto.fanton@protonmail.com
copyright:           Copyright (c) 2022 Alberto Fanton
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:       Utils
                       , Day01
                       , Day02
                       , Day03
                       , Day04
                       , Day05
                       , Day06
                       , Day07
                       , Day08
                       , Day09
                       , Day10
                       , Day11                                                                                            
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , fourmolu
                       , hlint
                       , apply-refact                  
                       , megaparsec
                       , protolude
                       , text
                       , parser-combinators
                       , matrix
  default-language:    Haskell2010

executable aoc2022-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:         aoc2022
                       , base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       
test-suite aoc2022-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: HUnit >= 1.6.2.0
               , aoc2022
               , base >= 4.7 && < 5
               , megaparsec
               , matrix               
  default-language: Haskell2010
  other-modules:   UtilsTest
                 , Day07Test
                 , Day08Test                 