cabal-version: 1.12
name:           ch17
version:        0.1.0.0
author:         Alberto Fanton
maintainer:     alberto.fanton@protonmail.com
copyright:      Copyright (c) 2020 Alberto Fanton
license:        BSD3
build-type:     Simple
library
  exposed-modules:
      ZipList
      Lib
      List
      Validation
      FinalExs
  other-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  
test-suite ch17-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test      
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ch17
    ,  QuickCheck
    ,  checkers

  default-language: Haskell2010
