name:                ch18
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alberto Fanton
maintainer:          alberto.fanton@protonmail.com
copyright:           Copyright (c) 2020 Alberto Fanton
category:            Learning Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ListMonad
                     , MaybeMonad
                     , EitherMonad
                     , BadMonad
                     , Kleisli
                     , FinalExs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

Test-Suite ch18-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
                     , ch18
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010                     