name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exercies#readme
license:             BSD3n
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, exercises, QuickCheck

library
  exposed-modules:     MyLib
  build-depends:       base >=4.13 && <4.14, QuickCheck
  default-language:    Haskell2010
  hs-source-dirs:      src
 
test-suite tests
  type: exitcode-stdio-1.0
  main-is: MyTest.hs
  hs-source-dirs: test
  build-depends: QuickCheck, base, base >=4.13 && <4.14, exercises
  default-language:    Haskell2010
           