name:                applicative
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple                                                

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

Test-Suite applicative-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
                     , applicative  

