name:                ch12
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/albertodvp/ch12#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Fanton
maintainer:          alberto.fanton@protonmail.com
copyright:           Copyright (c) 2022 Alberto Fanton
category:            Learning
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , text >= 1.2.5.0
                     , text-show
  default-language:    Haskell2010
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/albertodvp/ch12
