name:                ch20
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/albertodvp/ch20#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Fanton
maintainer:          alberto.fanton@protonmail.com
copyright:           2021 Alberto Fanton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ch20
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
