name:                ch21
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/albertodvp/ch21#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Fanton
maintainer:          alberto.fanton@protonmail.com
copyright:           2021 Alberto Fanton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5


Test-Suite ch21-testsuite
  hs-source-dirs:      testsuite/tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       QuickCheck
                     , QuickCheck >= 2.14.2
                     , base >= 4.7 && < 5
                     , ch21
                     , checkers >= 0.5.6