name:                ch23
version:             0.1.0.0
synopsis: ch23
description: ch23 -x
homepage:            https://github.com/githubuser/ch23#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
                     , transformers
  default-language:    Haskell2010
  exposed-modules: Moi

test-suite ch23-testsuite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language:    Haskell2010
  hs-source-dirs: test
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , ch23
  
        
source-repository head
  type:     git
  location: https://github.com/githubuser/ch23


  