name:                ch24
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch24#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       attoparsec >= 0.13.2.5
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.12.0
                     , containers >= 0.6.5.1
                     , hspec
                     , parsec >= 3.1.14.0
                     , parsers
                     , raw-strings-qq
                     , text >= 1.2.4.1
                     , trifecta
                     , aeson >= 1.5.6.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ch24
